[frontend] add table page
