# api/swagger.json
@@ -264,7 +264,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Body-dto_CreateCategoryResponse"
+                            "$ref": "#/definitions/response.Body-dto_ListResponse-dto_CreateUserResponse"
                         }
                     }
                 }
@@ -556,6 +556,20 @@
                 }
             }
         },
+        "dto.ListResponse-dto_CreateUserResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.CreateUserResponse"
+                    }
+                }
+            }
+        },
         "dto.LoginRequest": {
             "type": "object",
             "required": [
@@ -709,6 +723,20 @@
                 },
                 "data": {
                     "$ref": "#/definitions/dto.ListResponse-dto_CreateLabelResponse"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.Body-dto_ListResponse-dto_CreateUserResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/dto.ListResponse-dto_CreateUserResponse"
                 },
                 "msg": {
                     "type": "string"
